jenkins-2.528.3/manifests/route-jenkins.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins # Jenkins가 설치된 네임스페이스
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "jenkins.test.com" # 접속할 도메인
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins # kubectl get svc에서 확인된 서비스 이름
          port: 8080 # NodePort(30000)가 아닌 서비스의 내부 포트(8080)
